--- a/configs/ere.conf
+++ b/configs/ere.conf
@@ -47,6 +47,13 @@ base_config_conll04 {
   plm_tokenizer_name = t5-small
 }
 
+t5_small_conll04 = ${base_config_ace05}{
+  plm_learning_rate = 5e-5
+  task_learning_rate = 1e-4
+
+  plm_pretrained_name_or_path = t5-small
+}
+
 t5_base_conll04 = ${base_config_conll04}{
   plm_learning_rate = 5e-5
   task_learning_rate = 1e-4
