--- a/configs/ere.conf
+++ b/configs/ere.conf
@@ -195,7 +195,7 @@ t5_11b_ace05 = ${t5_3b_ace05}{
   plm_pretrained_name_or_path = t5-11b
 }
 
-flant5_xxl_ace05 = ${t5_3b_ace05_wu08}{
+flant5_xxl_ace05 = ${t5_3b_ace05}{
   plm_pretrained_name_or_path = bigscience/flan-t5-xxl
   eval_frequency = 2000
 }
