--- a/configs/ere.conf
+++ b/configs/ere.conf
@@ -47,7 +47,7 @@ base_config_conll04 {
   plm_tokenizer_name = t5-small
 }
 
-t5_small_conll04 = ${base_config_ace05}{
+t5_small_conll04 = ${base_config_conll04}{
   plm_learning_rate = 5e-5
   task_learning_rate = 1e-4
 
