--- a/configs/ner.conf
+++ b/configs/ner.conf
@@ -98,6 +98,18 @@ t5_base = ${conll03_ner}{
   
   eval_frequency = 1000
 }
+
+genia_t5_base = ${genia_ner}{
+  plm_learning_rate = 5e-5
+  task_learning_rate = 3e-4
+
+  hidden_size = 150
+
+  plm_pretrained_name_or_path = t5-base
+
+  eval_frequency = 1000
+}
+
 flant5_base = ${t5_large}{
   plm_pretrained_name_or_path = google/flan-t5-base
 }
@@ -109,6 +121,11 @@ t5_large = ${t5_base}{
 flant5_large = ${t5_large}{
   plm_pretrained_name_or_path = google/flan-t5-large
 }
+
+genia_flant5_large = ${genia_t5_base} {
+    plm_pretrained_name_or_path = google/flan-t5-large
+}
+
 
 t5_3b = ${t5_base}{
   plm_learning_rate = 3e-5
