Add T5 small config

--- a/configs/ner.conf
+++ b/configs/ner.conf
@@ -88,6 +88,17 @@ genia_ner {
   plm_tokenizer_name = t5-small
 }
 
+t5_small = ${conll03_ner}{
+  plm_learning_rate = 5e-5
+  task_learning_rate = 3e-4
+
+  hidden_size = 150
+
+  plm_pretrained_name_or_path = t5-small
+
+  eval_frequency = 1000
+}
+
 t5_base = ${conll03_ner}{
   plm_learning_rate = 5e-5
   task_learning_rate = 3e-4
