--- a/configs/ere.conf
+++ b/configs/ere.conf
@@ -143,6 +143,18 @@ base_config_ace05 {
   plm_tokenizer_name = t5-small
 }
 
+t5_small_ace05 = ${base_config_ace05}{
+  plm_learning_rate = 5e-5
+  task_learning_rate = 3e-4
+  warmup_ratio = 0.1
+
+  hidden_size = 150
+  eval_frequency = 1000
+
+  plm_pretrained_name_or_path = t5-small
+}
+
+
 t5_base_ace05 = ${base_config_ace05}{
   plm_learning_rate = 5e-5
   task_learning_rate = 3e-4
